# object-oriented-programming

./: README.md  main  user driven menu of programs.txt
2024-spring-se102la-final-retake-bsse23100/: .gitignore  Client.cpp  Client.h  Invoice.h  Management.h  README.md  Salaries.cpp  Transactions.cpp  Transactions.h  main.cpp
2024-spring-se102la-final-retake-bsse23100/json/: salaries.json  transactions.json
Project/: Abdullah work.pptx  OOP presentation.pptx
Project/2024-spring-se102ta-project-se102a-f/: Admin.h  Ali_Hasnain.cpp  Announcements.json  Boogie.cpp  Boogie.h  BusinessTicket.cpp  BusinessTicket.h  BusinessTicket.json  DateTime.h  DiningCar.cpp  DiningCar.h  DiningTable.cpp  DiningTable.h  Feedback.h  Feedback.json  LocalTicket.cpp  LowerAcTicket.cpp  Passenger.json  Person.cpp  Person.h  Platform.cpp  Platform.h  Route.cpp  Route.h  Schedule.cpp  Schedule.h  Seats.h  Station.cpp  Ticket.cpp  TicketManagement.cpp  Train.cpp  Train.json  Umar_Ahmad.h
Project/New folder/: Admin.cpp  Admins_login.json  Ali_Hasnain.h  Announcements.cpp  Announcements.h  Boogie.json  BusinessTicket.json  DateTime.cpp  DinningTable.json  Engine.cpp  Engine.h  Feedback.cpp  LocalTicket.h  LocalTicket.json  LowerAC.json  LowerAcTicket.h  Muhammad_Abdullah.cpp  Muhammad_Abdullah.h  Passenger.cpp  Passenger.h  (+19 more)
Template Class OOP/: CMakeLists.txt  Feedback.cpp  Feedback.h  main.cpp
assignments/: assignment 11 java.java
final take 1/: AssignmentManagement.cpp  CMakeLists.txt  Final.h  Management.cpp  Management.h  MidTerm.cpp  MidTerm.h  Project.cpp  Project.h  Quiz.cpp  Quiz.h  Student.h  assignment1.json  course.json  main.cpp
labs/2024-spring-se102la-final-retake-bsse23100/: CMakeLists.txt  Invoice.cpp  Management.cpp  Salaries.h
labs/2024-spring-se102la-final-retake-bsse23100/json/: invoices.json
(+320 files in other folders)
